# hanzi4096

./: Cargo.toml  README.md  build.rs  chinese-chars.txt
examples/: hanzi4096.rs
src/: lib.rs
tests/: tests.rs
