[package]
name = "hanzi4096"
version = "0.1.0"
authors = ["quininer kel <quininer@live.com>"]
description = "This library encodes bytes into 12-bit 汉字."
repository = "https://github.com/quininer/hanzi4096"
license = "MIT"
build = "build.rs"

[dependencies]
phf = "0.7"

[build-dependencies]
phf_codegen = "0.7"

[dev-dependencies]
clap = "2.20"
quickcheck = "0.4"
